k8s/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: user-crud
spec:
  containers:
    - name: debug-container
      image: achugaynov/user-crud:v1.0
      command: ["sleep", "3600"]
  restartPolicy: Never
