k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-app
  namespace: user-crud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-app
  template:
    metadata:
      labels:
        app: user-app
    spec:
      containers:
        - name: user-app
          image: achugaynov/user-crud:latest
          ports:
            - containerPort: 8080
