k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: user-crud
spec:
  selector:
    app: user-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
